# Technical-Interview

./: ConvLSTM.py  ConvLSTMCell.py  Gaia_ai.py  Gaia_ai_final_coding_interview.py  Kodiak Take Home.cpp  Kodiak_data.txt  Salin247_TASK_1.py  Seq2Seq.py  Training.ipynb  set.py
scene_prediction_package/: README.md  pyproject.toml
scene_prediction_package/src/convlstm/: Sequence_to_Sequence.py  Single_ConvLstm.py  Unrolled_ConvLstm.py  utils.py
