[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convlstm"
version = "0.0.2"
authors = [
  { name="Dhyey Manish Rajani", email="drajani@umich.edu" },
]
description = "convlstm code"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
